--- a/bcms/building_construction_manufacturing_service/doctype/attach_image_for_financial_approval_form/attach_image_for_financial_approval_form.json
+++ b/bcms/building_construction_manufacturing_service/doctype/attach_image_for_financial_approval_form/attach_image_for_financial_approval_form.json
@@ -12,14 +12,15 @@
   {
    "fieldname": "attach_image_for_financial_approval_form",
    "fieldtype": "Attach",
-   "label": "Attach Image for Financial Approval Form"
+   "in_list_view": 1,
+   "label": "Financial Approval Form"
   }
  ],
  "grid_page_length": 50,
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2025-07-22 19:03:56.070120",
+ "modified": "2025-07-28 14:12:14.919113",
  "modified_by": "Administrator",
  "module": "Building Construction Manufacturing Service",
  "name": "Attach Image for Financial Approval Form",
