--- a/bcms/building_construction_manufacturing_service/doctype/financial_approval/financial_approval.json
+++ b/bcms/building_construction_manufacturing_service/doctype/financial_approval/financial_approval.json
@@ -6,8 +6,10 @@
  "engine": "InnoDB",
  "field_order": [
   "name_of_station",
-  "description_of_works",
   "estimated_cost",
+  "description_of_works",
+  "column_break_noae",
+  "duration_month",
   "remark"
  ],
  "fields": [
@@ -34,13 +36,23 @@
    "fieldtype": "Small Text",
    "in_list_view": 1,
    "label": "Remark"
+  },
+  {
+   "fieldname": "column_break_noae",
+   "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "duration_month",
+   "fieldtype": "Int",
+   "in_list_view": 1,
+   "label": "Project Completion Time(In Month)"
   }
  ],
  "grid_page_length": 50,
  "index_web_pages_for_search": 1,
  "istable": 1,
  "links": [],
- "modified": "2025-07-28 14:54:29.214237",
+ "modified": "2025-08-01 12:59:25.095969",
  "modified_by": "Administrator",
  "module": "Building Construction Manufacturing Service",
  "name": "Financial Approval",
